--- a/src/test/java/resources/test-application.yml
+++ b/src/test/java/resources/test-application.yml
@@ -1,17 +1,15 @@
-server:
-  port: 9000
-
 spring:
   h2:
     console:
       enabled: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:~/mem-data;
+    url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;
     driverClassName: org.h2.Driver
     username: sa
     password:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
+      dialect: org.hibernate.dialect.MariaDBDialect
     database-platform: org.hibernate.dialect.H2Dialect
